Fixed inner scroll to align with ticket

--- a/packages/commonwealth/client/styles/pages/user_dashboard/dashboard_communities_preview.scss
+++ b/packages/commonwealth/client/styles/pages/user_dashboard/dashboard_communities_preview.scss
@@ -38,6 +38,9 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  position: absolute;
+  right: 0;
+  z-index: 1;
 
   @include mediumSmallInclusive {
     display: none;
