--- a/packages/commonwealth/client/styles/pages/user_dashboard/index.scss
+++ b/packages/commonwealth/client/styles/pages/user_dashboard/index.scss
@@ -5,6 +5,7 @@
   flex: 1;
   gap: 56px;
   justify-content: space-between;
+  z-index: -3;
 
   @include contentPadding;
 
